shared-components/src/components/button/button-shared.scss
.rds-button__shared {
  --common-button--primary-color: var(--button-primary-fg);
  --common-button--primary-bg: var(--accent-color);
  --common-button--primary-hover-bg: var(--accent-color-mid);
  --common-button--primary-pressed-bg: var(--accent-color-dark);

  --common-button--secondary-border-color: var(--foreground-primary);
  --common-button--secondary-color: var(--foreground-primary);
  --common-button--secondary-hover-color: var(--background-primary);
  --common-button--secondary-hover-bg: var(--foreground-primary);

  --common-button--tertiary-bg: var(--foreground-overlay-soft);
  --common-button--tertiary-color: var(--foreground-primary);
  --common-button--tertiary-hover-bg: var(--foreground-primary);
  --common-button--tertiary-hover-color: var(--background-primary);
  --common-button--tertiary-pressed-bg: var(--background-secondary);
  --common-button--tertiary-pressed-color: var(--foreground-primary);

  --common-button--disabled-bg: var(--foreground-secondary);
  --common-button--disabled-color: var(--foreground-tertiary);

  // button reset
  border: none;
  width: auto;
  overflow: visible;

  background: transparent;

  /* inherit font & color from ancestor */
  color: inherit;
  font: inherit;

  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
  line-height: normal;

  /* Corrects font smoothing for webkit */
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;

  /* Corrects inability to style clickable `input` types in iOS */
  -webkit-appearance: none;
  /* Remove excess padding and border in Firefox 4+ */
  &::-moz-focus-inner {
    border: 0;
    padding: 0;
  }

  display: flex;
  transition: 125ms ease-in-out;
  transition-property: color, box-shadow, background-color;
  font-weight: bold;

  &--primary {
    color: var(--common-button--primary-color);
    background-color: var(--common-button--primary-bg);

    &:active {
      box-shadow: none;
      background-color: var(--common-button--primary-pressed-bg);
    }
  }

  &--secondary {
    background-color: transparent;
    border: 2px solid var(--common-button--secondary-border-color);
    color: var(--common-button--secondary-color);

    &:hover {
      background-color: var(--common-button--secondary-hover-bg);
      color: var(--common-button--secondary-hover-color);
    }
  }

  &--tertiary {
    background-color: var(--common-button--tertiary-bg);
    color: var(--common-button--tertiary-color);

    &:hover {
      background-color: var(--common-button--tertiary-hover-bg);
      color: var(--common-button--tertiary-hover-color);
    }

    &:active {
      background-color: var(--common-button--tertiary-pressed-bg);
      color: var(--common-button--tertiary-pressed-color);
    }
  }

  &:disabled {
    background-color: var(--common-button--disabled-bg);
    color: var(--common-button--disabled-color);
    box-shadow: none;
    cursor: not-allowed;
    border: none;
  }

  &:hover {
    box-shadow: var(--rds-box-shadow--default);
  }

  &:active {
    box-shadow: none;
  }
}

